# dtypetest

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  scratch.ipynb
docs/source/: conf.py  index.rst
dtypetest/: dtypes.py  type_checker.py
tests/: class.py  dynamic_for_types.py  simple.py  test_dtypes.py
